# ESP32-SMS2Email

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
assets/air780ex/: readme.md
components/: readme.md
components/blink_led/: CMakeLists.txt  Kconfig  blink_led.c  blink_led.h  idf_component.yml
components/time_manager/: CMakeLists.txt  Kconfig  ntp_client.c  ntp_client.h
components/tmp_station/: CMakeLists.txt  Kconfig  readme.md  tmp_station.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  main.c  my_config.h
